fix navbar vert. align

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 nav {
     background-color: #000000;
-    min-height: 50px;
+    min-height: 100px;
     width: 100%;
     position: fixed;
     max-width: 100%;
@@ -16,10 +16,13 @@ nav {
     right: 5px;
     width: 70%;
     height: inherit;
-    top: 25%;
+    /* top: 25%; */
     /* background-color: #f8f8f8; */
     display: flex;
     justify-content: space-between;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 a.anchor-refs {
